--- a/index.html
+++ b/index.html
@@ -1,14 +1,4 @@
 <!DOCTYPE html>
-<<<<<<< HEAD
-<html>
-
-<body>
-  <h1>Hello Worldd</h1>
-  <p>I'm hosted with GitHub Pages.</p>
-</body>
-
-</html>
-=======
 <html lang="ru">
   <head>
     <meta charset="utf-8">
@@ -17,7 +7,7 @@
     <link rel="icon" href="favicon.svg">
     <title></title>
     <meta name="Description">
-    <link rel="stylesheet" href="css/index.css?_v=9ccd9d384cc9d4b697f3c91173c37ac6">
+    <link rel="stylesheet" href="css/index.css?_v=84b3ae792761e3a3186e1054ed628519">
   </head>
   <body class="site index-page">
     <h1 class="visually-hidden"></h1>
@@ -56,6 +46,7 @@
       <h1 class="hero__name">Город Мастеров «AleGvik»</h1>
       <h2 class="hero__slogan">Ваш путь в мир искусства</h2>
     </div>
+    <p>test</p>
     <p>Наша студия объединяет профессиональных художников и мастеров с многолетним опытом, готовых делиться своими знаниями и вдохновлять на творчество.</p>
     <p>Мы гордимся своими выпускниками, которые успешно поступают в ведущие ВУЗы и находят свой путь в искусстве.</p>
     <h3>Результаты вдохновляют!</h3>
@@ -155,10 +146,9 @@
       </ul>
     </div>
     <div class="map">
-      <script type="text/javascript" charset="utf-8" async src="https://api-maps.yandex.ru/services/constructor/1.0/js/?um=constructor%3Ae09a4cda94f3d6e3a738ab9e18b1031be6f110a28a74f7e53c100e83ba1fd1df&amp;amp;width=100%25&amp;amp;height=400&amp;amp;lang=ru_RU&amp;amp;scroll=true&_v=9ccd9d384cc9d4b697f3c91173c37ac6"></script>
+      <script type="text/javascript" charset="utf-8" async src="https://api-maps.yandex.ru/services/constructor/1.0/js/?um=constructor%3Ae09a4cda94f3d6e3a738ab9e18b1031be6f110a28a74f7e53c100e83ba1fd1df&amp;amp;width=100%25&amp;amp;height=400&amp;amp;lang=ru_RU&amp;amp;scroll=true&_v=84b3ae792761e3a3186e1054ed628519"></script>
     </div>
     <div class="page-footer"></div>
-    <script src="js/index.js?_v=9ccd9d384cc9d4b697f3c91173c37ac6"></script>
+    <script src="js/index.js?_v=84b3ae792761e3a3186e1054ed628519"></script>
   </body>
 </html>
->>>>>>> 7feac6f (Initial commit for dest repo)
