--- a/lettering.html
+++ b/lettering.html
@@ -7,7 +7,7 @@
     <link rel="icon" href="favicon.svg">
     <title></title>
     <meta name="Description">
-    <link rel="stylesheet" href="css/index.css?_v=51bd2d390e2de642efccfc9f5c0f7939">
+    <link rel="stylesheet" href="css/index.css?_v=2003391afcb500c95823968202ac0594">
   </head>
   <body class="site index-page">
     <h1 class="visually-hidden">Леттеринг</h1>
@@ -16,7 +16,7 @@
     <div class="page-header">
       <div class="main-menu">
         <ul class="main-menu__list">
-          <li class="main-menu__item">Курсы
+          <li class="main-menu__item" tabindex="0">Курсы
             <ul class="main-menu__sub-menu">
               <li class="main-menu__sub-item"><a href="/akademicheskiy-risunok.html">Академический рисунок</a></li>
               <li class="main-menu__sub-item"><a href="/zhivopis.html">Живопись</a></li>
@@ -38,6 +38,10 @@
           <li class="main-menu__item"><a href="/kontakti.html">Контакты</a></li>
         </ul>
       </div>
+      <test></test>
+      <test></test>
+      <test></test>
+      <test></test>
     </div>
     <h2>Леттеринг: Искусство, Которое Зажигает Творчество</h2>
     <p>Вы когда-нибудь мечтали создавать такие надписи, от которых невозможно оторвать взгляд? Леттеринг — это больше, чем просто красивые буквы. Это искусство, которое позволяет выразить себя, создать уникальный стиль и добавить изюминку в любой проект.</p>
@@ -65,9 +69,9 @@
     <p>Места ограничены!</p>
     <p>📞 Позвоните нам прямо сейчас и станьте мастером леттеринга уже сегодня!</p>
     <div class="map">
-      <script type="text/javascript" charset="utf-8" async src="https://api-maps.yandex.ru/services/constructor/1.0/js/?um=constructor%3Ae09a4cda94f3d6e3a738ab9e18b1031be6f110a28a74f7e53c100e83ba1fd1df&amp;amp;width=100%25&amp;amp;height=400&amp;amp;lang=ru_RU&amp;amp;scroll=true&_v=51bd2d390e2de642efccfc9f5c0f7939"></script>
+      <script type="text/javascript" charset="utf-8" async src="https://api-maps.yandex.ru/services/constructor/1.0/js/?um=constructor%3Ae09a4cda94f3d6e3a738ab9e18b1031be6f110a28a74f7e53c100e83ba1fd1df&amp;amp;width=100%25&amp;amp;height=400&amp;amp;lang=ru_RU&amp;amp;scroll=true&_v=2003391afcb500c95823968202ac0594"></script>
     </div>
     <div class="page-footer"></div>
-    <script src="js/index.js?_v=51bd2d390e2de642efccfc9f5c0f7939"></script>
+    <script src="js/index.js?_v=2003391afcb500c95823968202ac0594"></script>
   </body>
 </html>
