--- a/stati.html
+++ b/stati.html
@@ -7,7 +7,7 @@
     <link rel="icon" href="favicon.svg">
     <title></title>
     <meta name="Description">
-    <link rel="stylesheet" href="css/index.css?_v=51bd2d390e2de642efccfc9f5c0f7939">
+    <link rel="stylesheet" href="css/index.css?_v=2003391afcb500c95823968202ac0594">
   </head>
   <body class="site index-page">
     <h1 class="visually-hidden">Статьи</h1>
@@ -16,7 +16,7 @@
     <div class="page-header">
       <div class="main-menu">
         <ul class="main-menu__list">
-          <li class="main-menu__item">Курсы
+          <li class="main-menu__item" tabindex="0">Курсы
             <ul class="main-menu__sub-menu">
               <li class="main-menu__sub-item"><a href="/akademicheskiy-risunok.html">Академический рисунок</a></li>
               <li class="main-menu__sub-item"><a href="/zhivopis.html">Живопись</a></li>
@@ -38,6 +38,10 @@
           <li class="main-menu__item"><a href="/kontakti.html">Контакты</a></li>
         </ul>
       </div>
+      <test></test>
+      <test></test>
+      <test></test>
+      <test></test>
     </div>
     <div class="hero"><a class="hero__logo" href="/">
         <svg aira-hidden="true">
@@ -48,6 +52,6 @@
     </div>
     <h2>Статьи</h2>
     <div class="page-footer"></div>
-    <script src="js/index.js?_v=51bd2d390e2de642efccfc9f5c0f7939"></script>
+    <script src="js/index.js?_v=2003391afcb500c95823968202ac0594"></script>
   </body>
 </html>
