--- a/batik.html
+++ b/batik.html
@@ -7,7 +7,7 @@
     <link rel="icon" href="favicon.svg">
     <title></title>
     <meta name="Description">
-    <link rel="stylesheet" href="css/index.css?_v=2003391afcb500c95823968202ac0594">
+    <link rel="stylesheet" href="css/index.css?_v=867c445a864086c5b6d1e808e80ceb70">
   </head>
   <body class="site index-page">
     <h1 class="visually-hidden">Батик</h1>
@@ -57,10 +57,10 @@
       <p>Если вы давно мечтаете научиться создавать яркие, живые картины на ткани, наш курс — это ваш шанс! Мы научим вас техникам батика, поделимся секретами, как оживить ткань и создать настоящее произведение искусства. Запишитесь на курс сегодня, и в ближайшее время вы будете наслаждаться процессом создания собственных уникальных работ!</p>
       <p><i>Погрузитесь в мир батика и откройте для себя новый мир творчества!</i></p>
     </main>
-    <div class="map">
-      <script type="text/javascript" charset="utf-8" async src="https://api-maps.yandex.ru/services/constructor/1.0/js/?um=constructor%3Ae09a4cda94f3d6e3a738ab9e18b1031be6f110a28a74f7e53c100e83ba1fd1df&amp;amp;width=100%25&amp;amp;height=400&amp;amp;lang=ru_RU&amp;amp;scroll=true&_v=2003391afcb500c95823968202ac0594"></script>
+    <div class="map" aria-hidden="true">
+      <script type="text/javascript" charset="utf-8" async src="https://api-maps.yandex.ru/services/constructor/1.0/js/?um=constructor%3Ae09a4cda94f3d6e3a738ab9e18b1031be6f110a28a74f7e53c100e83ba1fd1df&amp;amp;width=100%25&amp;amp;height=400&amp;amp;lang=ru_RU&amp;amp;scroll=true&_v=867c445a864086c5b6d1e808e80ceb70"></script>
     </div>
     <div class="page-footer"></div>
-    <script src="js/index.js?_v=2003391afcb500c95823968202ac0594"></script>
+    <script src="js/index.js?_v=867c445a864086c5b6d1e808e80ceb70"></script>
   </body>
 </html>
