--- a/sketching.html
+++ b/sketching.html
@@ -7,7 +7,7 @@
     <link rel="icon" href="favicon.svg">
     <title></title>
     <meta name="Description">
-    <link rel="stylesheet" href="css/index.css?_v=2003391afcb500c95823968202ac0594">
+    <link rel="stylesheet" href="css/index.css?_v=867c445a864086c5b6d1e808e80ceb70">
   </head>
   <body class="site index-page">
     <h1 class="visually-hidden">Скетчинг</h1>
@@ -63,10 +63,10 @@
       <p>Регистрируйтесь, и уже через несколько занятий вы создадите свои первые уникальные скетчи.</p>
       <p>👉 [Ссылка на регистрацию или контакт для записи]</p>
     </main>
-    <div class="map">
-      <script type="text/javascript" charset="utf-8" async src="https://api-maps.yandex.ru/services/constructor/1.0/js/?um=constructor%3Ae09a4cda94f3d6e3a738ab9e18b1031be6f110a28a74f7e53c100e83ba1fd1df&amp;amp;width=100%25&amp;amp;height=400&amp;amp;lang=ru_RU&amp;amp;scroll=true&_v=2003391afcb500c95823968202ac0594"></script>
+    <div class="map" aria-hidden="true">
+      <script type="text/javascript" charset="utf-8" async src="https://api-maps.yandex.ru/services/constructor/1.0/js/?um=constructor%3Ae09a4cda94f3d6e3a738ab9e18b1031be6f110a28a74f7e53c100e83ba1fd1df&amp;amp;width=100%25&amp;amp;height=400&amp;amp;lang=ru_RU&amp;amp;scroll=true&_v=867c445a864086c5b6d1e808e80ceb70"></script>
     </div>
     <div class="page-footer"></div>
-    <script src="js/index.js?_v=2003391afcb500c95823968202ac0594"></script>
+    <script src="js/index.js?_v=867c445a864086c5b6d1e808e80ceb70"></script>
   </body>
 </html>
