--- a/novosti.html
+++ b/novosti.html
@@ -7,7 +7,7 @@
     <link rel="icon" href="favicon.svg">
     <title></title>
     <meta name="Description">
-    <link rel="stylesheet" href="css/index.css?_v=693ae04e04afe4d58d1d51c5c86c3a45">
+    <link rel="stylesheet" href="css/index.css?_v=0504dcfe1bd62f973a3c3b2c5d499d8d">
   </head>
   <body class="site index-page">
     <h1 class="visually-hidden">Новости</h1>
@@ -43,7 +43,7 @@
       <test></test>
       <test></test>
     </div>
-    <div class="hero"><a class="hero__logo" href="/">
+    <div class="hero"><a class="hero__logo" href="/" aria-label="Ссылка на главную страницу">
         <svg aira-hidden="true">
           <use href="#logo-alegvik"/>
         </svg></a>
@@ -52,6 +52,6 @@
     </div>
     <h2>Новости</h2>
     <div class="page-footer"></div>
-    <script src="js/index.js?_v=693ae04e04afe4d58d1d51c5c86c3a45"></script>
+    <script src="js/index.js?_v=0504dcfe1bd62f973a3c3b2c5d499d8d"></script>
   </body>
 </html>
