--- a/kontakti.html
+++ b/kontakti.html
@@ -7,7 +7,7 @@
     <link rel="icon" href="favicon.svg">
     <title></title>
     <meta name="Description">
-    <link rel="stylesheet" href="css/index.css?_v=693ae04e04afe4d58d1d51c5c86c3a45">
+    <link rel="stylesheet" href="css/index.css?_v=0504dcfe1bd62f973a3c3b2c5d499d8d">
   </head>
   <body class="site index-page">
     <h1 class="visually-hidden">Контакты</h1>
@@ -43,7 +43,7 @@
       <test></test>
       <test></test>
     </div>
-    <div class="hero"><a class="hero__logo" href="/">
+    <div class="hero"><a class="hero__logo" href="/" aria-label="Ссылка на главную страницу">
         <svg aira-hidden="true">
           <use href="#logo-alegvik"/>
         </svg></a>
@@ -65,9 +65,9 @@
       <li class="socials__item"><a class="socials__link socials__link--tt" href="https://www.tiktok.com/@alegvik_kz">tiktok</a></li>
     </div>
     <div class="map" aria-hidden="true">
-      <script type="text/javascript" charset="utf-8" async src="https://api-maps.yandex.ru/services/constructor/1.0/js/?um=constructor%3Ae09a4cda94f3d6e3a738ab9e18b1031be6f110a28a74f7e53c100e83ba1fd1df&amp;amp;width=100%25&amp;amp;height=400&amp;amp;lang=ru_RU&amp;amp;scroll=true&_v=693ae04e04afe4d58d1d51c5c86c3a45"></script>
+      <script type="text/javascript" charset="utf-8" async src="https://api-maps.yandex.ru/services/constructor/1.0/js/?um=constructor%3Ae09a4cda94f3d6e3a738ab9e18b1031be6f110a28a74f7e53c100e83ba1fd1df&amp;amp;width=100%25&amp;amp;height=400&amp;amp;lang=ru_RU&amp;amp;scroll=true&_v=0504dcfe1bd62f973a3c3b2c5d499d8d"></script>
     </div>
     <div class="page-footer"></div>
-    <script src="js/index.js?_v=693ae04e04afe4d58d1d51c5c86c3a45"></script>
+    <script src="js/index.js?_v=0504dcfe1bd62f973a3c3b2c5d499d8d"></script>
   </body>
 </html>
