fix third side cookies

--- a/index.html
+++ b/index.html
@@ -5,9 +5,10 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width">
     <link rel="icon" href="favicon.svg">
+    <meta http-equiv="Content-Security-Policy" content="script-src 'self'; object-src 'none';">
     <title>Город мастеров Alegvik</title>
     <meta name="Description">
-    <link rel="stylesheet" href="css/index.css?_v=e05817a0b8a62864f4d00f79c32e022a">
+    <link rel="stylesheet" href="css/index.css?_v=befef18fec8debe7ce0336876e697a7c">
   </head>
   <body class="site index-page">
     <h1 class="visually-hidden"> </h1>
@@ -146,6 +147,6 @@
     </div>
     <div class="map" id="map" aria-hidden="true"></div>
     <div class="page-footer"></div>
-    <script src="js/index.js?_v=e05817a0b8a62864f4d00f79c32e022a"></script>
+    <script src="js/index.js?_v=befef18fec8debe7ce0336876e697a7c"></script>
   </body>
 </html>
