build: (dest/all)

--- a/skulptura.html
+++ b/skulptura.html
@@ -6,13 +6,13 @@
     <meta name="viewport" content="width=device-width">
     <link rel="icon" href="favicon.svg"><link rel="preconnect" href="https://fonts.googleapis.com">
 <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-<link href="https://fonts.googleapis.com/css2?family=Caveat:wght@400..700&family=Cormorant+Garamond:ital,wght@0,300;0,400;0,500;0,600;0,700;1,300;1,400;1,500;1,600;1,700&family=Raleway:ital,wght@0,100..900;1,100..900&display=swap&_v=ee7d1e44b13f126ad247170784602c6c" rel="stylesheet">
+<link href="https://fonts.googleapis.com/css2?family=Caveat:wght@400..700&family=Cormorant+Garamond:ital,wght@0,300;0,400;0,500;0,600;0,700;1,300;1,400;1,500;1,600;1,700&family=Raleway:ital,wght@0,100..900;1,100..900&display=swap&_v=079eae2f028c844ec43edbb3228cd2f2" rel="stylesheet">
 <link rel="preconnect" href="https://fonts.googleapis.com">
 <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-<link href="https://fonts.googleapis.com/css2?family=Caveat:wght@400..700&family=Cormorant+Garamond:ital,wght@0,300;0,400;0,500;0,600;0,700;1,300;1,400;1,500;1,600;1,700&family=Great+Vibes&family=Raleway:ital,wght@0,100..900;1,100..900&display=swap&_v=ee7d1e44b13f126ad247170784602c6c" rel="stylesheet">
+<link href="https://fonts.googleapis.com/css2?family=Caveat:wght@400..700&family=Cormorant+Garamond:ital,wght@0,300;0,400;0,500;0,600;0,700;1,300;1,400;1,500;1,600;1,700&family=Great+Vibes&family=Raleway:ital,wght@0,100..900;1,100..900&display=swap&_v=079eae2f028c844ec43edbb3228cd2f2" rel="stylesheet">
     <title></title>
     <meta name="Description">
-    <link rel="stylesheet" href="css/index.css?_v=ee7d1e44b13f126ad247170784602c6c">
+    <link rel="stylesheet" href="css/index.css?_v=079eae2f028c844ec43edbb3228cd2f2">
   </head>
   <body class="site index-page">
     <h1 class="visually-hidden">Скульптура</h1>
@@ -21,7 +21,7 @@
     <div class="page-header">
       <div class="main-menu">
         <ul class="main-menu__list">
-          <li class="main-menu__item" tabindex="0">Курсы
+          <li class="main-menu__item" tabindex="0" role="button">Курсы
             <ul class="main-menu__sub-menu">
               <li class="main-menu__sub-item"><a href="/akademicheskiy-risunok.html">Академический рисунок</a></li>
               <li class="main-menu__sub-item"><a href="/zhivopis.html">Живопись</a></li>
@@ -58,6 +58,6 @@
     </main>
     <div class="map" id="map" aria-hidden="true"></div>
     <div class="page-footer"></div>
-    <script src="js/index.js?_v=ee7d1e44b13f126ad247170784602c6c"></script>
+    <script src="js/index.js?_v=079eae2f028c844ec43edbb3228cd2f2"></script>
   </body>
 </html>
